@@ -1,4 +1,4 @@
 __version__ = "0.2.0"
-dependencies = ["hcli_core>=3.7.1,<4.0.0",
+dependencies = ["hcli_core>=3.7.3,<4.0.0",
                 "hcli_problem_details>=0.2.0,<1.0.0",
                 "dulwich==0.24.1"]
