@@ -9,6 +9,8 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 - Add middleware hcli falcon auth and fix 3rd party hcli response
 - Add repos location config and HAG_HOME support
 - Add logger output and cleanup outstanding printouts
+- Add anonymous read operations on git repos
+- Add authentication support for write operations on git repo
 - Remove repos test folder
 - Remove outstanding hcli_hai references
 
